fix: modal responsivity on mobile

--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -63,10 +63,16 @@
 
 @media (max-width: 768px) {
   .modal-container {
-    padding: 1.5rem;
+    padding: 0 1.5rem;
+  }
+  .modal-content {
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
   .modal-content {
     flex-direction: column;
-    height: 70dvh;
+    height: max-content;
   }
 }
